--- a/srmcmd.man
+++ b/srmcmd.man
@@ -44,6 +44,9 @@ supported.
 \fB\-t\fR, \fB\-\-time\fR
 Set the PCs time to the current system time.
 .TP
+\fB\-v\fR, \fB\-\-verbose\fR
+Enable verbose status messages.
+.TP
 \fB\-w\fR, \fB\-\-write\fR=\fIdestination\fR
 Write data retrieved from PC (or with --read from file) to the specified
 destination file. Files are written using the SRM7 format.
