--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+srmio (0.0.2) unstable; urgency=low
+
+  * optionally fill mini-gaps at block-bounaries as srmin does.
+  * changed internal time representation to srm_time_t. got rid of ->tsec.
+  * don't skip complete block on empty chunk.
+
+ -- Rainer Clasen <bj@zuto.de>  Fri, 24 Jul 2009 19:51:23 +0200
+
 srmio (0.0.1) unstable; urgency=low
 
   * Initial Release.
