--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
 srmio (0.0.2) unstable; urgency=low
 
-  * internal: srmpc_get_data/-_chunks now pass parameters as struct
-  * optionally fill mini-gaps at block-bounaries as srmin does.
-  * changed internal time representation to srm_time_t. got rid of ->tsec.
   * don't skip complete block on empty chunk.
+  * changed internal time representation to srm_time_t. got rid of ->tsec.
+  * optionally fill mini-gaps at block-bounaries as srmin does.
+  * internal: srmpc_get_data/-_chunks now pass parameters as struct
+  * use PCV time to guess "current" year when downloading data
 
- -- Rainer Clasen <bj@zuto.de>  Fri, 24 Jul 2009 19:51:23 +0200
+ -- Rainer Clasen <bj@zuto.de>  Mon, 27 Jul 2009 19:36:37 +0200
 
 srmio (0.0.1) unstable; urgency=low
 
