fixed broken %lf formats, got rid of plain "float"s fixed ->fixup check for gapfill/chunk_add check mktime return values avoid strndup for portability srmfile: properly refuse writing invalid files wait for data being written to PCV with tcdrain(), check write() return value use cfsetispeed/cfsetospeed avoid %m printf format for portability
git-svn-id: svn+ssh://warp/project/srmio/trunk@30 481d0cf5-cefc-463a-8474-606d29eec73c

--- a/srmcmd.man
+++ b/srmcmd.man
@@ -69,7 +69,10 @@ destination file. Files are written using the SRM7 format.
 .SH EXAMPLES
 Show name configured in PC:
 
- srmcmd -n /dev/ttyUSB0
+ srmcmd -n /dev/ttyUSB0		# linux
+ srmcmd -n /dev/ttyS1		# cygwin, com1
+ srmcmd -n /dev/cu.usbserial*	# Mac OS X, prolific driver (good luck)
+ srmcmd -n /dev/cu.PL2303-*	# Mac OS X with http://osx-pl2303.sourceforge.net/
 
 Download data to out.srm, delete data on PC, adjust clock and set recint
 to 1sec:
