--- a/README
+++ b/README
@@ -22,19 +22,55 @@ Please take this warning serious. I've had no docs for the protocol, so I
 had to figure it out myself. While I had luck with srmwin bringing
 everything back to normal, you might not.
 
-I've used the original prolific-based USB 2 Serial download cable on linux
-2.6.27.
-
 If you just want to use it, please check
  man srmcmd
 
 Please reade the comments in the source (start with srmio.h) if you want
 to use the lib.
 
+Linux:
+======
+
+I've used the original prolific-based USB 2 Serial download cable on linux
+2.6.27. It shows up as /dev/ttyUSB0 (... or similar).
+
+Cygwin:
+=======
+
+Works fine with the original driver from SRM. Shows up as /dev/ttyS4
+(com4) or similar. When I've got my first SRM I've had the original
+prolific driver installed for a plain usb2serial cable: I've had very bad
+results with this driver. The issues vanished (for SRM and the usb2serial
+cable) when I've switched to the driver shipped by SRM.
+
+Mac OS X:
+=========
+
+With the original prolific drivers, starting the communication succeeded
+only occasionaly (around 1 of 15 attempts worked). Once the communication
+got established, data transmission worked fine. Reconecting kept working
+until the PCV had to be woken up, again. First waking the PCV up by pushing
+MODE seemed to improve the success-rate but was still very flaky.
+ device: /dev/cu.usbserial
+ kextstat:
+  106  0 0x8053e000 0x7000 0x6000 com.prolific.driver.PL2303 (1.2.1) <105 33 12>
+
+Once we've switched to the drivers from http://osx-pl2303.sourceforge.net/
+all Problems were gone.
+ device: /dev/cu.PL2303-* 
+ kextstat:
+  108  0 0x8056a000 0x7000 0x6000 nl.bjaelectronics.driver.PL2303 (1.0.0d1) <107 33 12>
+
+
+
+Notes:
+======
+
 Of course I'm open to all suggestions, comments and patches.
 
 If you experience problems with *your* PCV, please
- - recompile with -DDEBUG enabled.
+ - recompile with -DDEBUG enabled. 
+   (CFLAGS="-g -DDEBUG -Wall -Wextra" ./configure)
 
 If you want to help me adding support for your PCV, please capture the
 communication of some successful connections with srmwin:
