--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+srmio (0.0.3) unstable; urgency=low
+
+  * fixed getopt chars
+  * srmpc: data fixup also corrects blocks with <1sec overlap
+  * fix termios baudrate setting
+  * portability: printf formats, replace strndup, use cfset?speed
+
+ -- Rainer Clasen <bj@zuto.de>  Mon, 03 Aug 2009 22:37:08 +0200
+
 srmio (0.0.2) unstable; urgency=low
 
   * added option to override PCV Version whitelist
