--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ srmio (0.0.3.2009081001) unstable; urgency=low
   * fix srm_data_write: pick lowest timestamp (not necessarily the first) 
   * fix srm_data_write: properly determin days since 1880
   * made autoconf probe for localtime_r
+  * catch integer overflows to avoid writing broken data
 
- -- Rainer Clasen <bj@zuto.de>  Thu, 13 Aug 2009 15:45:39 +0200
+ -- Rainer Clasen <bj@zuto.de>  Fri, 14 Aug 2009 13:53:16 +0200
 
 srmio (0.0.3) unstable; urgency=low
 
