--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+srmio (0.0.5.git0) unstable; urgency=low
+
+  * prepared next release
+
+ -- Rainer Clasen <bj@zuto.de>  Thu, 21 Jan 2010 10:23:49 +0100
+
 srmio (0.0.5) unstable; urgency=low
 
   * gitignore: added *.exe
