major API rework + feature additions
* abstraction layer for serial access to allow different means (termios,
  d2xxx, win32)
* abstraction layer for distinct PowerControl protocols.
* moved all byte conversions + swapping to seperate module.
* moved chunk and marker "classes" to seperate modules.
* moved fixup to seperate module.
* added ways for splitting data on gaps or recint changes
* got rid of xfer handle, as there's only one at a time
* nuked firmware whitelist
* nuked logging callback (ongoing), will provide wordy error messages by
  other means.
* added knobs to prefer baud/parity settings for PCV.
* changed file reading/writing to use a supplied stdio handle.
* stop sharing return values for "success" and real data - this is
  confusing.
* moved most allocations to the caller (chunks, blocks, ...) allowing more
  flexibility.
* rolled out enums for most options for better readability
* seperated object creation ( foo_new() ) and parameter ( foo_set_bar() )
  for readability and extensibility.

--- a/README
+++ b/README
@@ -111,6 +111,9 @@ Notes:
 
 Of course I'm open to all suggestions, comments and patches.
 
+Sorry for my home-brewn "object model" for C, but I didn't want to pay the
+GObject price.
+
 If you experience problems with *your* PCV, please
  - recompile with -DVERBOSE -DDEBUG enabled. 
    (./configure CFLAGS="-g -DVERBOSE -DDEBUG -Wall -Wextra")
