--- a/README
+++ b/README
@@ -163,6 +163,11 @@ Known Problems:
  - result of PC in non-metric display mode is untested.
  - negative temperatures are untested.
  - libary interface should have proper documentation
+ - for pc7 the data is a little bit different as what srmwin gets. srmwin
+   seems to do some smoothing for the elevation. more important: for some
+   (random?) chunks srmwin sets power and cadence to zero and I don't see
+   anything in the transmitted data, why it's doing this. As a result
+   srmwin will report slightly lower work for an exercise.
 
 web: http://www.zuto.de/project/srmio
 
