--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+srmio (0.0.9) unstable; urgency=low
+
+  * enabled compile warnings
+
+ -- Rainer Clasen <bj@schlepp.mich.zuto.de>  Mon, 20 Feb 2012 12:07:03 +0100
+
+srmio (0.0.8) unstable; urgency=low
+
+  * fixed use of uninitialized connection handle
+  * fix missing termios initialization.
+
+ -- Rainer Clasen <bj@schlepp.mich.zuto.de>  Tue, 14 Feb 2012 19:06:08 +0100
+
 srmio (0.0.7) unstable; urgency=low
 
   * srmpc: fix missing initialization of device handle.
